; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/lsadump/extr_kuhl_m_lsadump_dc.c_kuhl_m_lsadump_dcshadow_getSingleTextAttrA.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/lsadump/extr_kuhl_m_lsadump_dc.c_kuhl_m_lsadump_dcshadow_getSingleTextAttrA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @kuhl_m_lsadump_dcshadow_getSingleTextAttrA(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  store i32* null, i32** %8, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i64, i64* %6, align 8
  %12 = inttoptr i64 %11 to i32*
  %13 = call i32** @ldap_get_valuesA(i32 %9, i32 %10, i32* %12)
  store i32** %13, i32*** %7, align 8
  %14 = icmp ne i32** %13, null
  br i1 %14, label %15, label %27

15:                                               ; preds = %3
  %16 = load i32**, i32*** %7, align 8
  %17 = call i32 @ldap_count_valuesA(i32** %16)
  %18 = icmp eq i32 %17, 1
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load i32**, i32*** %7, align 8
  %21 = getelementptr inbounds i32*, i32** %20, i64 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @kull_m_string_copyA(i32** %8, i32* %22)
  br label %24

24:                                               ; preds = %19, %15
  %25 = load i32**, i32*** %7, align 8
  %26 = call i32 @ldap_value_freeA(i32** %25)
  br label %27

27:                                               ; preds = %24, %3
  %28 = load i32*, i32** %8, align 8
  ret i32* %28
}

declare dso_local i32** @ldap_get_valuesA(i32, i32, i32*) #1

declare dso_local i32 @ldap_count_valuesA(i32**) #1

declare dso_local i32 @kull_m_string_copyA(i32**, i32*) #1

declare dso_local i32 @ldap_value_freeA(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
